# ad-synth-ai

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  STATEMENT ON THE USE OF GENERATIVE AI.txt  cloudbuild.yaml  pyproject.toml
backend/: ARCHITECTURE.md  main.py
data/: chatbot_knowledge.json  chatbot_knowledge_vectors.npy
docs/: CHATBOT_FEATURE.md  GCP_DEPLOYMENT_GUIDE.md  LOCAL_DEV_SETUP.md
frontend/: ARCHITECTURE.md  index.html
prompts/: ARCHITECTURE.md  audience_agent.txt  brand_consistency_agent.txt  campaign_architecture_agent.txt  channel_agent.txt  chatbot_agent.txt  competitor_agent.txt  creative_agent.txt  evaluation_agent.txt  experiment_design_agent.txt  loop_evaluator_agent.txt  market_segmentation_agent.txt  marketing_agent.txt  persona_agent.txt  pricing_analysis_agent.txt  product_agent.txt  prompt_agent.txt  quantitative_analysis_agent.txt  reddit_search_agent.txt  sentiment_analysis_agent.txt  trend_agent.txt  trend_aggregator_agent.txt  trend_critic_agent.txt  trend_instagram_agent.txt  trend_keyword_agent.txt  trend_pinterest_agent.txt  trend_query_agent.txt  trend_reddit_agent.txt  trend_synthesis_agent.txt  trend_tiktok_agent.txt  trend_twitter_agent.txt  trend_validator_agent.txt  trend_web_agent.txt  trend_youtube_agent.txt  web_search_agent.txt
scripts/: run_pipeline_test.py  run_tests.sh
tests/: ARCHITECTURE.md  conftest.py
tools/: ARCHITECTURE.md  code_tools.py  knowledge_store_tools.py  reddit_tools.py  research_cache_tools.py  search_tools.py  serpapi_tools.py  trend_cache_tools.py  (+2 more)
(+126 files in other folders)
